# LiveCapture

./: CMakeLists.txt  README.md  main.cpp
include/: capture.h  encoder.h  jitter_buffer.h  metrics.h  streamer.h
include/commons/: macros.h  utils.h
src/: capture.cpp  encoder.cpp  jitter_buffer.cpp  metrics.cpp  streamer.cpp
src/commons/: logger.cpp  utils.cpp
